[project]
name = "datasette-export-database"
version = "0.3a1"
description = "Export a copy of a SQLite database on demand"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers=[
    "Framework :: Datasette"
]
requires-python = ">=3.10"
dependencies = [
    "datasette==1.0a27"
]

[project.urls]
Homepage = "https://github.com/datasette/datasette-export-database"
Changelog = "https://github.com/datasette/datasette-export-database/releases"
Issues = "https://github.com/datasette/datasette-export-database/issues"
CI = "https://github.com/datasette/datasette-export-database/actions"

[project.entry-points.datasette]
export_database = "datasette_export_database"

[dependency-groups]
dev = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
